<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey">

        <RelativeLayout

            android:id="@+id/relativeLayout"
            android:layout_width="376dp"
            android:layout_height="125dp"
            android:layout_marginBottom="44dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.457"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/editTextTextPersonName"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="226dp"
                android:layout_marginBottom="-50dp"
                android:text="@string/search_button" />

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="280dp"
                android:layout_height="62dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="44dp"
                android:layout_marginBottom="59dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/search"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/share_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="7dp"
                android:text="Find in Google" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="373dp"
            android:layout_height="102dp"
            android:layout_marginTop="60dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textGuide"
                android:layout_width="198dp"
                android:layout_height="wrap_content"
                android:text="@string/header"
                android:textColor="@color/white"
                android:textSize="30dp" />

            <ImageView
                android:id="@+id/imageSVG"
                android:layout_width="83dp"
                android:layout_height="49dp"
                app:srcCompat="@drawable/icons8_destiny_2" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="360dp"
            android:layout_height="525dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.501">

            <Button
                android:id="@+id/raidButton"
                android:layout_width="309dp"
                android:layout_height="78dp"
                android:backgroundTint="@color/green"
                android:text="@string/raid_button"
                android:textSize="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.509"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.091"
                />

            <Button
                android:id="@+id/dungeonButton"
                android:layout_width="303dp"
                android:layout_height="91dp"
                android:layout_marginBottom="48dp"
                android:backgroundTint="@color/green"
                android:text="@string/dungeon_button"
                android:textColor="@color/white"
                android:textSize="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.561"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/imageSkull"
                android:layout_width="172dp"
                android:layout_height="192dp"
                android:layout_marginTop="164dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/skull" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>